--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: PuR3 S0uL
 description: Blogs and WriteUps
 theme: just-the-docs
 color_scheme: dark
+plugins: jekyll-sitemap
 
 url: https://pur3-s0ul.github.io/pur3s0ul/
 
