--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ url: https://pur3-s0ul.github.io/pur3s0ul/
 aux_links:
   Template Repository: https://github.com/pur3-S0uL/pur3s0ul/
 
-plugins:
-  - jekyll-sitemap
+#plugins:
+#  - jekyll-sitemap
