--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ description: Blogs and WriteUps
 theme: just-the-docs
 color_scheme: dark
 
-url: https://pur3-s0ul.github.io/pur3s0ul/
+url: https://pur3-s0ul.github.io/pur3s0ul
 
 aux_links:
-  Template Repository: https://github.com/pur3-S0uL/pur3s0ul/
+  Template Repository: https://github.com/pur3-S0uL/pur3s0ul
 
 plugins:
   - jekyll-sitemap
