--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: Blogs and WriteUps
 theme: just-the-docs
 color_scheme: dark
 
-url: https://pur3-s0ul.github.io
-
+#url: https://pur3-s0ul.github.io
+baseurl: "/pur3s0ul"
 aux_links:
   Template Repository: https://github.com/pur3-S0uL/pur3s0ul
 
