--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: just-the-docs
 color_scheme: dark
 
 #url: https://pur3-s0ul.github.io
-url: "https://pur3-s0ul.github.io/pur3s0ul"
+url: "https://pur3-s0ul.github.io"
 #aux_links:
 #  Template Repository: https://github.com/pur3-S0uL/pur3s0ul
 
